remove javax.persistence dependency; modify unit test modify jetty-env to use new hsqldb version