@@ -16,7 +16,17 @@
 
     <dependencies>
 
-
+        <dependency>
+            <groupId>xalan</groupId>
+            <artifactId>xalan</artifactId>
+            <version>2.7.1</version>
+        </dependency>
+        <!-- httpclient -->
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.3.1</version>
+        </dependency>
         <!-- Webedav java client Sardine -->
         <dependency>
             <groupId>com.googlecode.sardine</groupId>
@@ -192,7 +202,6 @@
             <groupId>javax.servlet</groupId>
             <artifactId>servlet-api</artifactId>
             <version>2.5</version>
-            <scope>provided</scope>
         </dependency>
 
         <dependency>
@@ -239,11 +248,6 @@
             <artifactId>bcprov-jdk16</artifactId>
             <version>1.40</version>
         </dependency>
-        <dependency>
-            <groupId>commons-httpclient</groupId>
-            <artifactId>commons-httpclient</artifactId>
-            <version>3.1</version>
-        </dependency>
 
         <dependency>
             <groupId>net.sf.json-lib</groupId>
@@ -286,41 +290,5 @@
         </plugins>
     </build>
 
-
-    <!-- <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-javadoc-plugin</artifactId>
-        <version>2.7</version> <configuration> <doclet>gr.spinellis.umlgraph.doclet.UmlGraphDoc</doclet>
-        <docletArtifact> <groupId>gr.spinellis</groupId> <artifactId>UmlGraph</artifactId>
-        <version>4.4</version> </docletArtifact> <additionalparam> <![CDATA[ -charset
-        UTF-8 -docencoding UTF-8 -version -author -breakiterator -windowtitle "${project.name}
-        ${project.version} API Reference" -doctitle "<img src='doc-files/logo.png'><br><b><font
-        size='+2'>SDC Server</b></font><br>" -bottom "Copyright &#169; ${project.inceptionYear}-Present
-        ${project.organization.name} All Rights Reserved." -use -tag async:a:Asynchronous
-        -inferrel -inferdep -quiet -hide java.* -collpackages java.util.* -qualify
-        -postfixpackage -nodefontsize 9 -nodefontpackagesize 7 ]]> </additionalparam>
-        </configuration> </plugin> <plugin> <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-checkstyle-plugin</artifactId> <version>2.6</version> </plugin>
-        <plugin> <groupId>org.codehaus.mojo</groupId> <artifactId>findbugs-maven-plugin</artifactId>
-        <version>2.3.1</version> <configuration> <argLine>-Xmx256m</argLine> <argLine>-XX:MaxPermSize=256m</argLine>
-        </configuration> </plugin> <plugin> <groupId>org.codehaus.mojo</groupId>
-        <artifactId>jdepend-maven-plugin</artifactId> <version>2.0-beta-2</version>
-        </plugin> <plugin> <groupId>org.codehaus.mojo</groupId> <artifactId>cobertura-maven-plugin</artifactId>
-        <version>2.4</version> </plugin> <plugin> <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-jxr-plugin</artifactId> <version>2.1</version> </plugin>
-        <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-pmd-plugin</artifactId>
-        <version>2.5</version> <configuration> <linkXref>true</linkXref> <minimumTokens>100</minimumTokens>
-        <minimumPriority>3</minimumPriority> <targetJdk>1.6</targetJdk> </configuration>
-        </plugin> </reportPlugins> </configuration> </plugin> </plugins> </build>
-        <reporting> <plugins> <plugin> <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-javadoc-plugin</artifactId> <version>2.8</version> <configuration>
-        <doclet>gr.spinellis.umlgraph.doclet.UmlGraphDoc</doclet> <docletArtifact>
-        <groupId>gr.spinellis</groupId> <artifactId>UmlGraph</artifactId> <version>4.4</version>
-        </docletArtifact> <additionalparam> <![CDATA[ -charset UTF-8 -docencoding
-        UTF-8 -version -author -breakiterator -windowtitle "${project.name} ${project.version}
-        API Reference" -doctitle "<img src='doc-files/logo.png'><br><b><font size='+2'>SDC
-        Server</b></font><br>" -bottom "Copyright &#169; ${project.inceptionYear}-Present
-        ${project.organization.name} All Rights Reserved." -use -tag async:a:Asynchronous
-        -inferrel -inferdep -quiet -hide java.* -collpackages java.util.* -qualify
-        -postfixpackage -nodefontsize 9 -nodefontpackagesize 7 ]]> </additionalparam>
-        </configuration> </plugin> </plugins> </reporting> -->
 
 </project>
